--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </nav>
 
     <!-- Hero Section (Exemplo) -->
-    <header class=" d-flex align-items-center py-5">
+    <header class="d-flex align-items-center py-5">
       <div class="container pt-5">
         <h1 class="display-5 big text-center text-white">
           Olá! Eu sou Hemel Aly.
@@ -353,6 +353,37 @@
               </div>
             </div>
           </div>
+
+          <div class="col-12 col-lg-6">
+            <div class="carded">
+              <div
+                class="card-body rounded border-0 p-4 p-xxl-5"
+                style="background: #030c21"
+              >
+                <div class="row align-items-center">
+                  <div class="col-12 col-md-7 skill-title">
+                    <h3 class="fw-bold mb-2 text-white">Figma</h3>
+                    <p class="text-secondary fst-italic mb-4 mb-md-0">
+                      Bootstrap is a front-end framework that makes it easy to
+                      create responsive and mobile-friendly websites.
+                    </p>
+                  </div>
+                  <div class="col-12 col-md-5 skill-progress progress-item">
+                    <div class="progress-item">
+                      <div
+                        class="progress-label d-flex justify-content-end text-end"
+                      >
+                        <span>85%</span>
+                      </div>
+                      <div class="progress-bar">
+                        <div class="progress-fill" data-width="85"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -538,25 +569,37 @@
         <div class="col-12 col-md-6">
           <h4 class="text-white text-uppercase">1. Descoberta</h4>
           <p class="text-white">
-            Realizamos uma imersão no seu negócio para identificar objetivos, público-alvo e requisitos técnicos. Através de workshops, análise de concorrência e definição de KPIs, criamos um roadmap estratégico que alinha tecnologia aos seus resultados comerciais.
+            Realizamos uma imersão no seu negócio para identificar objetivos,
+            público-alvo e requisitos técnicos. Através de workshops, análise de
+            concorrência e definição de KPIs, criamos um roadmap estratégico que
+            alinha tecnologia aos seus resultados comerciais.
           </p>
           <hr class="text-white" />
 
           <h4 class="text-white text-uppercase">2. Design</h4>
           <p class="text-white">
-            Criamos interfaces que combinam usabilidade e engajamento. Desenvolvemos wireframes, protótipos interativos e designs pixel-perfect, garantindo uma jornada do usuário intuitiva e alinhada à identidade visual da sua marca.
+            Criamos interfaces que combinam usabilidade e engajamento.
+            Desenvolvemos wireframes, protótipos interativos e designs
+            pixel-perfect, garantindo uma jornada do usuário intuitiva e
+            alinhada à identidade visual da sua marca.
           </p>
           <hr class="text-white" />
 
           <h4 class="text-white text-uppercase">3. Desenvolvimento</h4>
           <p class="text-white">
-            Implementamos soluções robustas usando as melhores práticas de codificação. Desenvolvimento front-end performático, integração com CMS/APIs, e funcionalidades personalizadas com testes rigorosos em cada etapa para garantir qualidade e segurança.
+            Implementamos soluções robustas usando as melhores práticas de
+            codificação. Desenvolvimento front-end performático, integração com
+            CMS/APIs, e funcionalidades personalizadas com testes rigorosos em
+            cada etapa para garantir qualidade e segurança.
           </p>
           <hr class="text-white" />
 
           <h4 class="text-white text-uppercase">4. Lançamento</h4>
           <p class="text-white">
-           Preparação final com otimização de performance, SEO técnico e migração segura. Realizamos monitoramento pós-lançamento para garantir estabilidade e oferecemos treinamento para sua equipe gerenciar o conteúdo com autonomia.
+            Preparação final com otimização de performance, SEO técnico e
+            migração segura. Realizamos monitoramento pós-lançamento para
+            garantir estabilidade e oferecemos treinamento para sua equipe
+            gerenciar o conteúdo com autonomia.
           </p>
           <hr class="text-white" />
         </div>
@@ -580,7 +623,7 @@
       </div>
 
       <div class="row">
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-lg-4 my-3">
           <div
             class="card p-3 text-white border-0"
             style="
@@ -592,16 +635,21 @@
             "
           >
             <div class="card-body">
-              <img src="assets/img/web.png" width="20%" alt="" class="img-fluid mb-3">
+              <img
+                src="assets/img/web.png"
+                width="20%"
+                alt=""
+                class="img-fluid mb-3"
+              />
               <h4 class="card-title">Web Design</h4>
               <p class="card-text mb-3">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                quasi deserunt optio.
+                Criar sites visualmente impressionantes e fáceis de usar é a
+                essência do meu trabalho.
               </p>
               <br />
-              <p class="border-bottom border-white pb-2">lorem Ipsum</p>
-              <p class="border-bottom border-white pb-2">lorem Ipsum</p>
-              <p class="">lorem Ipsum</p>
+              <p class="border-bottom border-white pb-2">Design Exclusivo</p>
+              <p class="border-bottom border-white pb-2">Layouts Responsivos</p>
+              <p class="">Sites Fáceis de Usar</p>
               <br />
               <a href="#" class="btn btn-light"
                 >Agendar Consulta <span class="fas fa-arrow-right"></span
@@ -610,19 +658,23 @@
           </div>
         </div>
 
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-lg-4 my-3">
           <div class="card bg-light p-3 text-dark border-0">
             <div class="card-body">
-              <img src="assets/img/code.png" width="20%" alt="" class="img-fluid mb-3">
-              <h4 class="card-title">Web Design</h4>
+              <img
+                src="assets/img/code.png"
+                width="20%"
+                alt=""
+                class="img-fluid mb-3"
+              />
+              <h4 class="card-title">Desenvolvimento</h4>
               <p class="card-text mb-3">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                quasi deserunt optio.
+                Transformo seus designs em realidade através de código otimizado e de alto desempenho
               </p>
               <br />
-              <p class="border-bottom border-dark pb-2">lorem Ipsum</p>
-              <p class="border-bottom border-dark pb-2">lorem Ipsum</p>
-              <p class="">lorem Ipsum</p>
+              <p class="border-bottom border-dark pb-2">Domínio em HTML, CSS, & JS</p>
+              <p class="border-bottom border-dark pb-2">Compatibilidade entre Navegadores</p>
+              <p class="">Sites Rápidos e Destacados</p>
               <br />
               <a href="#" class="btn btn-dark"
                 >Agendar Consulta <span class="fas fa-arrow-right"></span
@@ -631,19 +683,23 @@
           </div>
         </div>
 
-        <div class="col-12 col-lg-4">
-          <div class="card p-3 text-white border-0" style="background: #030c21;">
+        <div class="col-12 col-lg-4 my-3">
+          <div class="card p-3 text-white border-0" style="background: #030c21">
             <div class="card-body">
-              <img src="assets/img/copyright.png" width="20%" alt="" class="img-fluid mb-3">
-              <h4 class="card-title">Web Design</h4>
+              <img
+                src="assets/img/copyright.png"
+                width="20%"
+                alt=""
+                class="img-fluid mb-3"
+              />
+              <h4 class="card-title">Identidade Visual</h4>
               <p class="card-text mb-3">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                quasi deserunt optio.
+                Construir uma identidade de marca forte é essencial para se destacar em um mercado competitivo.
               </p>
               <br />
-              <p class="border-bottom border-white pb-2">lorem Ipsum</p>
-              <p class="border-bottom border-white pb-2">lorem Ipsum</p>
-              <p class="">lorem Ipsum</p>
+              <p class="border-bottom border-white pb-2">Design de Logotipo</p>
+              <p class="border-bottom border-white pb-2">Paleta de Cores Coersivas</p>
+              <p class="">Guia de Identidade Visual</p>
               <br />
               <a href="#" class="btn btn-light"
                 >Agendar Consulta <span class="fas fa-arrow-right"></span
@@ -730,11 +786,11 @@
     <footer class="py-4 py-md-5 bg-transparent">
       <!-- Logo & SM - Bootstrap Brain Component -->
       <div>
-        <div class="container border-bottom border-dark pb-4">
+        <div class="container border-bottom border-white pb-4">
           <div class="row gy-3 align-items-sm-center">
             <div class="col-12 col-sm-6">
               <div class="footer-logo-wrapper text-start">
-                <a href="#" class="text-white fw-bold fs-4"> HEMELALY </a>
+                <a href="#" class="text-white fw-bold fs-4"> HEMEL ALY </a>
               </div>
             </div>
             <div class="col-12 col-sm-6">
