--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </button>
 
         <!-- Itens Centralizados -->
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse fw-bold" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <!-- mx-auto centraliza -->
             <li class="nav-item">
