--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 realmente funcionam.
               </p>
             </div>
-            <a href="#" class="btn btn-light"
+            <a href="mailto:hemelaly02@gmail.com" class="btn btn-light"
               ><span
                 class="fa-solid fa-arrows-turn-right me-2 text-primary"
               ></span>
@@ -159,9 +159,9 @@
             <h2 class="display-5 mb-4">
               Design UX/UI que Torna a Interação Digital Natural e Eficiente.
             </h2>
-            <button type="button" class="btn btn-primary mb-3 mb-md-4 mb-xl-5">
+            <!-- <button type="button" class="btn btn-primary mb-3 mb-md-4 mb-xl-5">
               Explore Mais
-            </button>
+            </button> -->
           </div>
         </div>
       </div>
@@ -408,12 +408,17 @@
         <div class="col-12 col-lg-6 my-3">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">
-                <span
-                  class="fa-solid fa-arrows-turn-right me-2 text-primary"
-                ></span
-                >Projecto 1
-              </h5>
+              <div class="card-title d-flex justify-content-between">
+                <div class="title">
+                  <span
+                    class="fa-solid fa-arrows-turn-right me-2 text-primary"
+                  ></span>
+                  <span class="h5">Projecto MASSUNGULO</span>
+                </div>
+                <div class="button">
+                  <a href="assets/docs/HOMEPAGE_merged.pdf" target="_blank" class="btn btn-primary btn-sm">Baixar <span class="fas fa-download"></span></a>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-6">
                   <span></span>
@@ -421,7 +426,9 @@
                 <div class="col-6"></div>
               </div>
               <p class="card-text">
-                <small class="text-body-secondary">Actualizado há 2 dias</small>
+                <small class="text-body-secondary"
+                  >Actualizado há 4 horas</small
+                >
               </p>
             </div>
             <!-- <img
@@ -431,21 +438,32 @@
             /> -->
             <div
               class="d-flex justify-content-center bg-light align-items-center p-5"
+              style="max-height: 400px; overflow-y: auto"
             >
-              <p class="display-5">Brevemente!!!</p>
+              <img
+                class="img-fluid"
+                src="assets/img/massungulo.png"
+                width="100%"
+                alt=""
+              />
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-lg-6 my-3">
+         <div class="col-12 col-lg-6 my-3">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">
-                <span
-                  class="fa-solid fa-arrows-turn-right me-2 text-primary"
-                ></span
-                >Projecto 2
-              </h5>
+              <div class="card-title d-flex justify-content-between">
+                <div class="title">
+                  <span
+                    class="fa-solid fa-arrows-turn-right me-2 text-primary"
+                  ></span>
+                  <span class="h5">Projecto MASSUNGULO</span>
+                </div>
+                <div class="button">
+                  <a href="assets/docs/WEB-Dark_WEB-Light_merged.pdf" target="_blank" class="btn btn-primary btn-sm">Baixar <span class="fas fa-download"></span></a>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-6">
                   <span></span>
@@ -453,7 +471,9 @@
                 <div class="col-6"></div>
               </div>
               <p class="card-text">
-                <small class="text-body-secondary">Actualizado há 2 dias</small>
+                <small class="text-body-secondary"
+                  >Actualizado há 4 horas</small
+                >
               </p>
             </div>
             <!-- <img
@@ -463,21 +483,32 @@
             /> -->
             <div
               class="d-flex justify-content-center bg-light align-items-center p-5"
+              style="max-height: 400px; overflow-y: auto"
             >
-              <p class="display-5">Brevemente!!!</p>
+              <img
+                class="img-fluid"
+                src="assets/img/WEB-Dark.png"
+                width="100%"
+                alt=""
+              />
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-lg-6 my-3">
+         <div class="col-12 col-lg-6 my-3">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">
-                <span
-                  class="fa-solid fa-arrows-turn-right me-2 text-primary"
-                ></span
-                >Projecto 3
-              </h5>
+              <div class="card-title d-flex justify-content-between">
+                <div class="title">
+                  <span
+                    class="fa-solid fa-arrows-turn-right me-2 text-primary"
+                  ></span>
+                  <span class="h5">Projecto MASSUNGULO</span>
+                </div>
+                <div class="button">
+                  <a href="assets/docs/Página Inicial_merged.pdf" target="_blank" class="btn btn-primary btn-sm">Baixar <span class="fas fa-download"></span></a>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-6">
                   <span></span>
@@ -485,7 +516,9 @@
                 <div class="col-6"></div>
               </div>
               <p class="card-text">
-                <small class="text-body-secondary">Actualizado há 2 dias</small>
+                <small class="text-body-secondary"
+                  >Actualizado há 4 horas</small
+                >
               </p>
             </div>
             <!-- <img
@@ -495,51 +528,25 @@
             /> -->
             <div
               class="d-flex justify-content-center bg-light align-items-center p-5"
+              style="max-height: 400px; overflow-y: auto"
             >
-              <p class="display-5">Brevemente!!!</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-lg-6 my-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                <span
-                  class="fa-solid fa-arrows-turn-right me-2 text-primary"
-                ></span
-                >Projecto 4
-              </h5>
-              <div class="row">
-                <div class="col-6">
-                  <span></span>
-                </div>
-                <div class="col-6"></div>
-              </div>
-              <p class="card-text">
-                <small class="text-body-secondary">Actualizado há 2 dias</small>
-              </p>
-            </div>
-            <!-- <img
-              src="assets/img/Project-Pic-1.png"
-              class="card-img-bottom"
-              alt="..."
-            /> -->
-            <div
-              class="d-flex justify-content-center bg-light align-items-center p-5"
-            >
-              <p class="display-5">Brevemente!!!</p>
+              <img
+                class="img-fluid"
+                src="assets/img/Página Inicial.png"
+                width="100%"
+                alt=""
+              />
             </div>
           </div>
         </div>
       </div>
 
-      <div class="text-center mt-4">
+      <!-- <div class="text-center mt-4">
         <a href="#" class="btn btn-primary"
           ><span class="fa-solid fa-arrows-turn-right me-2 text-white"></span>
           Ver Todos</a
         >
-      </div>
+      </div> -->
     </section>
 
     <!-- Processo -->
@@ -559,7 +566,7 @@
             Como Trabalho <br />
             Minha Criatividade
           </h2>
-          <a href="#" class="btn btn-light"
+          <a href="mailto:hemelaly02@gmail.com" class="btn btn-light"
             ><span
               class="fa-solid fa-arrows-turn-right me-2 text-primary"
             ></span>
@@ -651,7 +658,7 @@
               <p class="border-bottom border-white pb-2">Layouts Responsivos</p>
               <p class="">Sites Fáceis de Usar</p>
               <br />
-              <a href="#" class="btn btn-light"
+              <a href="mailto:hemelaly02@gmail.com" class="btn btn-light"
                 >Agendar Consulta <span class="fas fa-arrow-right"></span
               ></a>
             </div>
@@ -669,14 +676,19 @@
               />
               <h4 class="card-title">Desenvolvimento</h4>
               <p class="card-text mb-3">
-                Transformo seus designs em realidade através de código otimizado e de alto desempenho
+                Transformo seus designs em realidade através de código otimizado
+                e de alto desempenho
               </p>
               <br />
-              <p class="border-bottom border-dark pb-2">Domínio em HTML, CSS, & JS</p>
-              <p class="border-bottom border-dark pb-2">Compatibilidade entre Navegadores</p>
+              <p class="border-bottom border-dark pb-2">
+                Domínio em HTML, CSS, & JS
+              </p>
+              <p class="border-bottom border-dark pb-2">
+                Compatibilidade entre Navegadores
+              </p>
               <p class="">Sites Rápidos e Destacados</p>
               <br />
-              <a href="#" class="btn btn-dark"
+              <a href="mailto:hemelaly02@gmail.com" class="btn btn-dark"
                 >Agendar Consulta <span class="fas fa-arrow-right"></span
               ></a>
             </div>
@@ -694,14 +706,17 @@
               />
               <h4 class="card-title">Identidade Visual</h4>
               <p class="card-text mb-3">
-                Construir uma identidade de marca forte é essencial para se destacar em um mercado competitivo.
+                Construir uma identidade de marca forte é essencial para se
+                destacar em um mercado competitivo.
               </p>
               <br />
               <p class="border-bottom border-white pb-2">Design de Logotipo</p>
-              <p class="border-bottom border-white pb-2">Paleta de Cores Coersivas</p>
+              <p class="border-bottom border-white pb-2">
+                Paleta de Cores Coersivas
+              </p>
               <p class="">Guia de Identidade Visual</p>
               <br />
-              <a href="#" class="btn btn-light"
+              <a href="mailto:hemelaly02@gmail.com" class="btn btn-light"
                 >Agendar Consulta <span class="fas fa-arrow-right"></span
               ></a>
             </div>
