--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                   <span
                     class="fa-solid fa-arrows-turn-right me-2 text-primary"
                   ></span>
-                  <span class="h5">Projecto MASSUNGULO</span>
+                  <span class="h5">Projecto TECH</span>
                 </div>
                 <div class="button">
                   <a href="assets/docs/WEB-Dark_WEB-Light_merged.pdf" target="_blank" class="btn btn-primary btn-sm">Baixar <span class="fas fa-download"></span></a>
@@ -503,7 +503,7 @@
                   <span
                     class="fa-solid fa-arrows-turn-right me-2 text-primary"
                   ></span>
-                  <span class="h5">Projecto MASSUNGULO</span>
+                  <span class="h5">Projecto RV AGENCY</span>
                 </div>
                 <div class="button">
                   <a href="assets/docs/Página Inicial_merged.pdf" target="_blank" class="btn btn-primary btn-sm">Baixar <span class="fas fa-download"></span></a>
